# panco3

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: example_C2_NIKA2.py
src/panco3/: __init__.py  abell_ref.py  cluster.py  config.py  filtering.py  fitter.py  geometry.py  inference.py  integrate.py  interp.py  io.py  model.py  posterior.py  priors.py  results.py  utils.py
tests/: conftest.py  test_cluster_parity.py  test_fitter.py  test_inference.py  test_integrate.py  test_model_parity.py  test_results.py
